# mailin-insecure

./: .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  data.md
mailin-cli/: Cargo.toml  README.md  test-certs
mailin-cli/scripts/: client-ssl.sh  client.sh
mailin-cli/src/: main.rs  store.rs
mailin-embedded/src/: lib.rs  ossl.rs  rtls.rs  running.rs  ssl.rs  stream.rs
mailin-server/k8s-deploy/: mailin-deploy.yaml
mailin-server/src/: main.rs  store.rs
mailin/src/: fsm.rs  lib.rs  parser.rs  response.rs  smtp.rs
mime-event/: Cargo.toml
mime-event/src/: event.rs  header.rs  lib.rs  line_parser.rs  message_parser.rs  parser.rs
mime-event/tests/: events.rs  message.rs
mxdns/src/: lib.rs
