[package]
name = "mime-event"
version = "0.1.0"
authors = ["Alienscience <saul@alienscience.org.uk>"]
description = "Event driven MIME parser for email messages"
repository = 'https://code.alienscience.org/alienscience/mailin'
readme = "README.md"
keywords = ["mime","smtp","email"]
categories = ["email","parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
nom = "7"
display_bytes = "0.2"
mailin = { path = "../mailin", version = "0.6.5" }
log = "0.4.26"

[dev-dependencies]
maplit = "1"
pretty_assertions = "1"
